--- a/src/css/sponsor.scss
+++ b/src/css/sponsor.scss
@@ -39,6 +39,7 @@ $btn-color: #9c7dff;
 
         @include device(tablet) {
             gap: clamp(0px, 1vw, 60px);
+            max-width: calc(100% - 54px);
         }
     }
 
@@ -48,7 +49,7 @@ $btn-color: #9c7dff;
         padding-top: 6px;
 
         @include device(tablet) {
-            width: 70%;
+            width: 85%;
         }
     }
 }
